book/tests/snapshots/snapshot__@language-features__case-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "# Can't yet format & compile\n\nfrom employees\nderive distance = case [\n  city == \"Calgary\" => 0,\n  city == \"Edmonton\" => 300,\n  true => \"Unknown\",\n]\n"
input_file: book/tests/prql/language-features/case-1.prql
---
Error:
   ╭─[:4:17]
   │
 4 │ derive distance = case [
   ·                 ┬
   ·                 ╰── unexpected =
───╯

